log
Thu May 12 15:26:02 UTC 2022: 
 sudoku.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
af4d714
Thu May 12 15:51:06 UTC 2022: 
 sudoku.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:13: error: unused variable ‘k’ [-Werror=unused-variable]
   int i, j, k;
             ^
sudoku.c:48:10: error: unused variable ‘j’ [-Werror=unused-variable]
   int i, j, k;
          ^
cc1: all warnings being treated as errors
Compilation failed
e51c115
Thu May 12 15:51:14 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0e24cb1
Thu May 12 15:53:08 UTC 2022: 
 sudoku.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
056616f
Thu May 12 15:55:36 UTC 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:59:8: error: redefinition of ‘ptr’
   int *ptr = (int*) calloc(10, sizeof(int));
        ^~~
sudoku.c:49:8: note: previous definition of ‘ptr’ was here
   int *ptr = (int*) calloc(10, sizeof(int));
        ^~~
Compilation failed
98556f1
Thu May 12 15:56:54 UTC 2022: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
4e2281f
Thu May 12 16:00:35 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2c36239
Thu May 12 22:49:30 UTC 2022: 
 sudoku.c | 28 ++++++++++++++++++++++------
 1 file changed, 22 insertions(+), 6 deletions(-)
 tests:  0|0
9922be8
Thu May 12 22:50:24 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
036b51d
Thu May 12 22:51:33 UTC 2022: 
 sudoku.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
086b4d9
Thu May 12 22:52:30 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
913dac5
Thu May 12 22:53:08 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
66c5d81
Thu May 12 22:54:05 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a09c93e
Thu May 12 23:01:21 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
034b89d
Thu May 12 23:06:47 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
2abfd53
Thu May 12 23:09:38 UTC 2022: 
 sudoku.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  2|4
total_score: 15/70
102802f
Thu May 12 23:19:04 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:144:5: note: previous definition of ‘main’ was here
 int main( int argc, char *argv[] ){
     ^~~~
Compilation failed
ddc7cbf
Thu May 12 23:25:24 UTC 2022: 
 sudoku.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:156:5: note: previous definition of ‘main’ was here
 int main( int argc, char *argv[] ){
     ^~~~
Compilation failed
756b193
Thu May 12 23:26:07 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c:245:5: error: redefinition of ‘main’
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:156:5: note: previous definition of ‘main’ was here
 int main( int argc, char *argv[] ){
     ^~~~
Compilation failed
d3154f6
Thu May 12 23:26:39 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
7415320
Thu May 12 23:26:49 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
38142e5
Thu May 12 23:26:58 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
508b769
Thu May 12 23:29:43 UTC 2022: 
 sudoku.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:85:13: error: unused variable ‘i’ [-Werror=unused-variable]
         int i=3*(k/3) + (p/3) ;
             ^
cc1: all warnings being treated as errors
Compilation failed
8ed0363
Thu May 12 23:29:54 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2f83cfd
Thu May 12 23:33:37 UTC 2022: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
983e148
Fri May 13 00:08:31 UTC 2022: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  0|0
b94a808
Fri May 13 00:13:44 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5a0e3d0
Fri May 13 00:17:49 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘DFS’:
sudoku.c:156:9: error: implicit declaration of function ‘size’ [-Werror=implicit-function-declaration]
   while(size(pila) != 0)
         ^~~~
cc1: all warnings being treated as errors
Compilation failed
708df28
Fri May 13 00:18:36 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
8d1810f
Fri May 13 00:57:14 UTC 2022: 
 sudoku.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
895ef11
Fri May 13 01:15:25 UTC 2022: 
 sudoku.c | 24 +++++++++++++++---------
 1 file changed, 15 insertions(+), 9 deletions(-)
 tests:  1|4
total_score: 10/70
768da05
Fri May 13 01:17:35 UTC 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:40: error: expected ‘)’ before ‘;’ token
     ptr = (int*) calloc(10, sizeof(int);
                                        ^
sudoku.c:67:3: error: expected ‘;’ before ‘}’ token
   }
   ^
sudoku.c:48:13: error: unused variable ‘b’ [-Werror=unused-variable]
   int a, s, b, l;
             ^
cc1: all warnings being treated as errors
Compilation failed
af44ecb
Fri May 13 01:18:37 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
5db140f
Fri May 13 01:21:59 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
92d3093
Fri May 13 01:22:59 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
268fb1c
Fri May 13 01:23:42 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
f11a46b
Fri May 13 01:35:55 UTC 2022: 
 sudoku.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
3212b92
Fri May 13 01:37:31 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 55/70
c83d98a
Fri May 13 01:43:56 UTC 2022: 
 sudoku.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  7|1
total_score: 55/70
5e0ad43
Fri May 13 01:44:17 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
b7ad700
